--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>テストサイト</h1>
-        <a href="https://drive.google.com/file/d/1HXDn5KbIHYv9CR4PkFqxeUmlbPZnHs9Q/view?usp=share_link" download="sample.pdf">PDFをダウンロードする</a>
+        <a href="https://drive.google.com/uc?export=download&id=1HXDn5KbIHYv9CR4PkFqxeUmlbPZnHs9Q" download="sample.pdf">PDFをダウンロードする</a>
     </body>
 </html>
