--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
+<!DOCTYPE>
 <html>
-    <head>
-        <title>test</title>
-    </head>
-    <body>
-        <h1>テストサイト</h1>
-        <a href="https://drive.google.com/uc?export=download&id=1HXDn5KbIHYv9CR4PkFqxeUmlbPZnHs9Q" download="sample.pdf">PDFをダウンロードする</a>
-    </body>
+<head>
+    <title>Kinexis</title>
+</head>
+<body>
+    <button type=“button” onclick="location.href='https://drive.google.com/uc?export=download&id=1HXDn5KbIHYv9CR4PkFqxeUmlbPZnHs9Q'">ダウンロード</button>
+</body>
 </html>
