--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Kinexis</title>
 </head>
 <body>
+    <h1>Kinexis公式サイト</h1>
     <button type=“button” onclick="location.href='https://drive.google.com/uc?export=download&id=1HXDn5KbIHYv9CR4PkFqxeUmlbPZnHs9Q'">ダウンロード</button>
 </body>
 </html>
