--- a/index.html
+++ b/index.html
@@ -1,11 +1,116 @@
 <!DOCTYPE>
 <html>
+
 <head>
-    <link rel="stylesheet" href="style.css" >
     <title>Kinexis</title>
+    <style>
+        body {
+            background-color: #3e503e
+        }
+
+        .title_background {
+            height: 100px;
+            background-color: rgb(88, 201, 186);
+            position: relative;
+            margin: 0 auto;
+            max-width: 1000px;
+            max-height: 100px;
+            margin-top: 20px;
+        }
+
+        .background {
+            height: 700px;
+            background-color: white;
+            position: relative;
+            margin: 0 auto;
+            max-width: 1000px;
+            max-height: 900px;
+        }
+
+        .title {
+            position: relative;
+            display: flex;
+            justify-content: space-around;
+            margin: 0 auto;
+            max-width: 200px;
+            padding: 10px 25px;
+        }
+
+        .text {
+            position: relative;
+            display: flex;
+            justify-content: space-around;
+            margin: 0 auto;
+            max-width: 300px;
+            padding: 50px 25px  0px;
+        }
+
+
+        .button001 button {
+            position: relative;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin: 0 auto;
+            max-width: 200px;
+            padding: 10px 25px;
+            color: #313131;
+            transition: 0.3s ease-in-out;
+            font-weight: 600;
+        }
+
+        .button001 button:before {
+            position: absolute;
+            bottom: 0px;
+            left: 50%;
+            content: '';
+            width: 100%;
+            height: 2px;
+            background: rgba(0, 0, 0, .1);
+            transform: translateX(-50%);
+        }
+
+        .button001 button:after {
+            position: absolute;
+            bottom: 0px;
+            left: 0;
+            content: '';
+            width: 100%;
+            height: 2px;
+            background: #000;
+            transform: scale(0, 1);
+            transform-origin: left top;
+            transition: transform .3s;
+        }
+
+        .button001 button:hover {
+            opacity: 0.7;
+        }
+
+        .button001 button:hover:after {
+            transform: scale(1, 1);
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Kinexis公式サイト</h1>
-    <button type=“button” onclick="location.href='https://drive.google.com/uc?export=download&id=1HXDn5KbIHYv9CR4PkFqxeUmlbPZnHs9Q'">ダウンロード</button>
+
+    <div class="background">
+        <div class="title_background">
+            <div class="title">
+                <h1>Kinexis公式</h1>
+            </div>
+        </div>
+        <div class="text">
+            <p> ↓↓↓ダウンロードはこちら↓↓↓ </p>
+        </div>
+
+        <div class="button001">
+            <button type=“button”
+                onclick="location.href='https://drive.google.com/uc?export=download&id=1HXDn5KbIHYv9CR4PkFqxeUmlbPZnHs9Q'">ダウンロード</button>
+        </div>
+    </div>
+
 </body>
+
 </html>
