--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
                 <div class="button001">
                     <button type=“button”
-                        onclick="location.href='https://drive.google.com/uc?export=download&id=1HXDn5KbIHYv9CR4PkFqxeUmlbPZnHs9Q'">ダウンロード</button>
+                        onclick="location.href='https://github.com/Team-Kinexis/Kinexis/releases/download/Kinexis/Kinexis_exe.zip'">ダウンロード</button>
                 </div>
             </div>
             <!--/container-->
