--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 
     <!--==============データ読み込み===============-->
-    <link rel="icon" type="image/x-icon" href="https://github.com/Team-Kinexis/Kinexis/blob/main/fav.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="fav.ico">
 
     <script>
         /*SNSアイコンscroll制御*/
