--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Kinexis</title>
     <meta name="description" content="Kinexis">
-
+    <meta http-equiv="Cache-Control" content="no-cache">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--==============レイアウトを制御するCSSを読み込み===============-->
     <link rel="stylesheet" type="text/css" href="style.css">
